// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
    , totalling 
    £2.56
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
    , totalling 
    £34,567.89
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with no expenses 1`] = `
<div>
  <h1>
    Viewing 
    0
     
    expenses
    , totalling 
    £0.00
  </h1>
</div>
`;
